
You might be wondering what this brings over just using the whole JBehave tool
standalone. Well, it gives you access to the Gherkin language in your features,
which is a richer DSL than JBehave's language. -Over 20 spoken languages, Tables, 
Scenario Outlines, the rich command line, the nice output format and everything 
pure Ruby users have been enjoying for a while.

== TODO Before 0.2 release
* Make sure all features and specs pass on Windows, JRuby and Ruby 1.9
* Verify that custom formatters work - write a feature for it
* Implement at least a basic HTML formatter
* Run a single cucumber feature from rake "rake features FEATURE=/path/to/feature:line"
* Wiki page about running subsets
** file:line
*** scenario (or step within)
*** scenario outline
*** scenario outline examples
*** line in an example table
*** background (same as whole file)
*** fix bugs in any of those cases (there are some)
** --tags
*** Link to page about tags
* Tags with arguments
* cucumber.jar + examples
** Remove need for -S cucumber
** Full jar and simple jar

== Bugfixes
* -n option does not suppress the line info for a Scenario Outline (#175 Aslak Hellesøy)
* Errors with rspec-rails matchers in cucumber 0.1.99 (#173 David Chelimsky)
* Can't use an empty string as a table value in a scenario outline (#172 Aslak Hellesøy)
* Really skip skipped steps (#90 Aslak Hellesøy)
* No output for multi-line strings (#71 Aslak Hellesøy)
* Fix cucumber/formatters/unicode flaws on Windows (#145 Michael)
* Autotest-related Bugs: YAML missing (#136 Tobias Pape)
* Overeager "rescue LoadError" hides lots of errors (#137 Jonathan del Strother)
* Nested steps don't show mismatch (#116 Aslak Hellesøy)
* Pending steps in > steps called from steps (#65 Aslak Hellesøy)

=== New features
* Keywords can be aliased in languages.yml. See English for an example (examples: Examples|Scenarios)
* Adding support for Background (#153 Joseph Wilk) 
* Added Česky/Czech (Vojtech Salbaba)