@@ -1,7 +1,7 @@
 module Cucumber
   module Ast
-    class Scenario
-      attr_writer :feature, :background
+    class Scenario < Background
+      attr_writer :background
       
       def initialize(comment, tags, line, keyword, name, steps)
         @comment, @tags, @line, @keyword, @name = comment, tags, line, keyword, name
@@ -9,12 +9,12 @@ module Cucumber
         @steps = steps
       end
 
-      def status
+       def status
         @steps.map{|step| step.status}
       end
 
       def tagged_with?(tag_names)
-        @tags.among?(tag_names) || @feature.tagged_with?(tag_names, false)
+        @tags.among?(tag_names) || @background.tagged_with?(tag_names, false)
       end
 
       def matches_scenario_names?(scenario_names)
@@ -22,37 +22,20 @@ module Cucumber
       end
 
       def accept(visitor)
-        visitor.visit_background(@background) if @background
         visitor.visit_comment(@comment)
         visitor.visit_tags(@tags)
         visitor.visit_scenario_name(@keyword, @name, file_line(@line), source_indent(text_length))
 
-        prior_world = @background ? @background.world : nil
-        visitor.world(self, prior_world) do |world|
-
-          previous = @background ? @background.status : :passed
-          @steps.each do |step|
-            step.previous = previous
-            step.world    = world
-            visitor.visit_step(step)
-            previous = step.status
-          end
+        previous = @background.status
+        @steps.each do |step|
+          step.previous = previous
+          step.world    = @background.world
+          visitor.visit_step(step)
+          previous = step.status
         end
+
         @feature.scenario_executed(self) if @feature && !@executed
         @executed = true
-      end
-
-      def source_indent(text_length)
-        max_line_length - text_length
-      end
-
-      def max_line_length
-        lengths = (@steps + [self]).map{|e| e.text_length}
-        lengths.max
-      end
-
-      def text_length
-        @keyword.jlength + @name.jlength
       end
 
       def at_lines?(lines)
@@ -63,20 +46,12 @@ module Cucumber
         lines.empty? || lines.index(@line) || @steps.detect {|step| step.at_lines?(lines)} || @tags.at_lines?(lines)
       end
 
-      def undefined?
-        @steps.empty?
-      end
-
       def step_executed(step)
         @feature.step_executed(step) if @feature
       end
 
-      def backtrace_line(name = "#{@keyword} #{@name}", line = @line)
-        @feature.backtrace_line(name, line) if @feature
-      end
-
-      def file_line(line = @line)
-        @feature.file_line(line) if @feature
+      def text_length
+        super + @name.jlength
       end
 
       def previous_step(step)
