@@ -9,29 +9,11 @@ module Cucumber
         @step_mother = Object.new
         @step_mother.extend(StepMother)
         $x = $y = nil
-        @step_mother.Before do
-          $x = 3
-        end
         @step_mother.Given /y is (\d+)/ do |n|
           $y = n.to_i
         end
         @visitor = Visitor.new(@step_mother)
         @visitor.options = {}
-      end
-
-      it "should execute Before blocks before steps" do
-        scenario = Scenario.new(
-          comment=Comment.new(""), 
-          tags=Tags.new(98,[]),
-          line=99,
-          keyword="", 
-          name="", 
-          steps=[
-            Step.new(7, "Given", "y is 5")
-          ])
-        @visitor.visit_feature_element(scenario)
-        $x.should == 3
-        $y.should == 5
       end
 
       it "should skip steps when previous is not passed" do
@@ -45,9 +27,9 @@ module Cucumber
             Step.new(7, "Given", "this is missing"),
             Step.new(8, "Given", "y is 5")
           ])
+        scenario.background = Background.new
         @visitor.visit_feature_element(scenario)
 
-        $x.should == 3
         $y.should == nil
       end
 
